welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:23: error: not found: value color
	setCouleurBrosse(color.YELLOW)
                         ^